# RUST_PORTFOLIO

./: Cargo.toml  Dockerfile  README.md  cargo_all_metadata.toml  cargo_lib.toml  cargowithprofile.toml  config.toml  tarpaulin-report.html
rust_frontend/: Cargo.toml  index.html
rust_frontend/src/: lib.rs
src/: .env  .gitlab-ci.yml  add.rs  crypto_python.py  deep_learning_prediction.py  example.txt  main.rs  mainHello.rs  main_API_expose_splunk.rs  main_DB.rs  main_NAN_price.rs  main_binance.rs  main_conditions.rs  main_json_serialdesrail.rs  main_latest_market_data.rs  main_n.rs  main_nope.rs  main_rdkafka.rs  main_rest.rs  main_rust_ai.rs  main_serde_all.rs  main_thread.rs  main_trains_polymorphism.rs  main_work.rs  mainenum.rs  mainhttp.rs  mainsleep.rs  sentiment_analysis.py  tests.rs
