[package]
name = "Rust_Portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4"
tch = "0.18.1"
actix-web = "4"
config = "0.15"
rdkafka = { version = "0.37", features = ["cmake-build"] }
log = "0.4"
env_logger = "0.11.5"
redis = "0.27.0"